fix detail dom, main slideWrap background

--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -91,7 +91,7 @@ body
         flex-wrap: wrap
         width: 370*10px
         margin: 0 auto
-        background: rgba(0,0,0,0.2)
+        background: rgba(0,0,0,0.5)
         text-align: center
         transition: all 0.5s
         transform: translateX(0px)
@@ -175,11 +175,12 @@ body
     height: 100%
     top: 0
     left: 0
-    padding: 200px 100px 100px 100px
+    padding: 275px 100px 100px 100px
     box-sizing: border-box
     background-image: linear-gradient(90deg, #874da2 0%, #c43a30 100%)
     img
         box-shadow: -5px -5px white
+        width: 350px
 
 .movieCate
     color: white
@@ -211,11 +212,12 @@ body
         display: flex
         div
             h1
-                font-size: 3.5vh
+                font-size: 6.5vh
                 line-height: 2.5em
+            h2
+                width: 60%
             &:last-child
                 padding :
-                    top: 100px
                     left: 50px
                     right: 50px
 
